# cassadilia

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
src/: cas.rs  cas_manager.rs  io.rs  lib.rs  orphan.rs  paths.rs  serialization.rs  settings.rs  test_utils.rs  tests.rs  transaction.rs  types.rs
src/index/: manager.rs  mod.rs  persistence.rs  state.rs
src/tests/: checkpoint.rs  mod.rs  scenarios.rs  utils.rs
src/tests/utils/: directory_helpers.rs
src/wal/: checkpoint.rs  manager.rs  mod.rs  replay.rs  storage.rs  tests.rs
